<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.greendog.example.dinoquizfinal.app.QuizActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#ffa9ff56">

    <TextView
        android:id="@+id/question_text_view"

        android:text="@string/who_knows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button"
            android:id="@+id/true_button"
            android:background="@drawable/true_false"
            android:layout_marginRight="10dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            android:id="@+id/false_button"
            android:background="@drawable/true_false"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:baselineAligned="false"
        android:layout_marginTop="60dp">

     <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:id="@+id/next_button"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:background="@drawable/nav_buttons"
            android:layout_marginRight="30dp"
            />

     <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev_button"
        android:id="@+id/prev_button"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:background="@drawable/nav_buttons"
        android:layout_marginLeft="30dp"/>
        </LinearLayout>

</LinearLayout>
